# package-typo-squatting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
ail_typo_squatting/: __init__.py  typo.py
ail_typo_squatting/format/: output.py
ail_typo_squatting/generator/: addDash.py  commonMisspelling.py  homoglyph.py  omission.py  repetition.py  replacement.py  singularPluralize.py  stripDash.py
ail_typo_squatting/generator/npm/: __init__.py  prefix.py  separator.py  suffix.py
ail_typo_squatting/generator/utils/: generator_functions.py
ail_typo_squatting/utils/: parser.py
pkg_typo_squatting/: __init__.py  typo.py
pkg_typo_squatting/format/: training.py
pkg_typo_squatting/generator/: addition.py  changeOrder.py  closeLetters.py  doubleHit.py  doubleReplacement.py  homophones.py  numeralSwap.py  removeSeparatedSection.py  vowelSwap.py
pkg_typo_squatting/generator/const/: main.py
pkg_typo_squatting/generator/npm/: prefix.py  scope.py  substitution.py  suffix.py
pkg_typo_squatting/generator/pypi/: __init__.py  prefix.py  separator.py  substitution.py  suffix.py  version_suffix.py
pkg_typo_squatting/generator/utils/: generator_functions.py  qwerty.py
pkg_typo_squatting/utils/: parser.py
tests/: test.py
