[tool.poetry]
name = "pkg-typo-squatting"
version = "1.0.0"
description = "Generate typosquatting variations for npm and PyPI package names"
authors = [
	"Julian Pinzer <jupinzer@microsoft.com>"
]
maintainers = [
	"Julian Pinzer <jupinzer@microsoft.com>"
]
license = "BSD-2-Clause"
repository = "https://github.com/jpinz/package-typo-squatting"

readme = "README.md"

keywords = [
	"typo-squatting",
	"typosquatting",
	"npm",
	"pypi",
	"supply-chain"
]

include = ["etc/*"]

[tool.poetry.dependencies]
python = "^3.8"
inflect = "^5.6.2"
pyyaml = "^6.0.1"
retrie = "^0.2.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pkg-typo-squatting = "pkg_typo_squatting.typo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

