[project]
name = "pkg-typo-squatting"
version = "1.0.0"
description = "Generate typosquatting variations for npm and PyPI package names"
authors = [
	{name = "Julian Pinzer", email = "jupinzer@microsoft.com"}
]
maintainers = [
	{name = "Julian Pinzer", email = "jupinzer@microsoft.com"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
	"typo-squatting",
	"typosquatting",
	"npm",
	"pypi",
	"supply-chain"
]
dependencies = [
	"inflect>=5.6.2",
	"pyyaml>=6.0.1",
	"retrie>=0.2.4",
	"tqdm>=4.64.0",
]

[project.urls]
Repository = "https://github.com/jpinz/package-typo-squatting"

[project.scripts]
pkg-typo-squatting = "pkg_typo_squatting.typo:main"

[dependency-groups]
dev = [
	"ruff>=0.4",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

